--- a/scss/block.scss
+++ b/scss/block.scss
@@ -2,14 +2,20 @@
 //  <!---------------------------------------------------------------------------------------------------->
 //  <!----------- MAX WIDTH : 9999px - 1370px ------------------------------------------------------------>
 //  <!---------------------------------------------------------------------------------------------------->
+
+
 // <!----------- HEADER ----------->
 header
 {
+    width: 100vw;
+
     height:           100vh;
+    position:         relative;
     display:          flex;
     flex-direction:   column;
     align-items:      center;
     justify-content:  center;
+    // background-color: $blue;
 
     .header__mouse
     {
@@ -39,7 +45,7 @@ header
 {
     position:        relative;
     min-height:      1000px;
-    width:           1230px;
+    // width:           1230px;
     display:         flex;
     justify-content: space-between; 
     align-items:     center;
@@ -65,7 +71,7 @@ header
 
 .gallery__wrap
 {
-    width:     1230px;
+    // width:     1230px;
     display:   flex;
     flex-wrap: wrap;
 }
@@ -92,11 +98,12 @@ header
 
 
 
+
 // <!----------- QUOTE ----------->
 .quote
 {
     height:      100vh;
-    max-width:   1230px;
+    // max-width:   1230px;
     display:     flex;
     align-items: center;
 }
@@ -107,7 +114,8 @@ header
 .contact
 {
     min-height:      700px;
-    width:           1230px;
+    // width:           1230px;
+    width: 100vw;
     display:         flex;
     justify-content: space-evenly;
     align-items:     center;
@@ -150,6 +158,8 @@ header
 // <!----------- FOOTER ----------->
 footer
 {
+    overflow-x: hidden;
+
     position:       relative;
     width:          100%;
     height:         380px;
@@ -199,8 +209,9 @@ and (min-width: 995px)
     // <!----------- GALLERY ----------->
     .gallery__wrap
     {
-        width:           995px;
-        justify-content: center;
+        // width:           995px;
+        // width: 100vw;
+        // justify-content: center;
     }
 
     .gallery__img
@@ -262,7 +273,7 @@ and (min-width: 320px)
     .about__01,
     .about__02
     {
-        width: 100%;
+        // width: 100%;
         flex-direction: column;
         justify-content: center;
     }
