--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 // This is where the sidebar element will go
 html
 {
+  overflow-x: hidden;
   scroll-behavior: smooth; // Enable smooth scrolling for the whole page
 }
 
@@ -58,7 +59,7 @@ html
 
 body
 {
-  width:          100%;
+  width:          100vw;
   display:        flex;
   flex-direction: column;
   align-items:    center;
@@ -68,7 +69,7 @@ body
 header, 
 section
 {
-  min-width: 320px;
+  width: 100vw;
 }
 
 
@@ -89,7 +90,7 @@ and (min-width: 995px)
   header, 
   section
   {
-    width:   995px;
+    // width:   995px;
     padding: 0 5rem;
   }
 }
@@ -106,7 +107,7 @@ and (min-width: 320px)
   header, 
   section
   {
-    min-width: 405px;
+    // min-width: 405px;
     padding:   0 5rem;
 
   }
